# artemis-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/: artemis-complaints.md  artemis-deadline.md  artemis-fix.md  artemis-score.md  artemis-tutor.md  artemis.md
.github/workflows/: ci.yml
artemis_cli/: config.py
artemis_cli/api/: assessments.py  client.py  complaints.py  courses.py  exercises.py  submissions.py
artemis_cli/cli/: assess.py  auth.py  complaints.py  courses.py  exercises.py  fmt.py  main.py  submissions.py
tests/: conftest.py  test_integration.py  test_unit.py
